--- a/faceDetection.ipynb
+++ b/faceDetection.ipynb
@@ -13,10 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f226aa79",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Press S to save the image\n",
+      "Press S to save the image\n"
+     ]
+    }
+   ],
    "source": [
     "class face_viewer:\n",
     "    \n",
@@ -31,7 +40,7 @@
     "        print(\"Press S to save the image\")\n",
     "        ch = cv2.waitKey(3000)\n",
     "        if ch==ord('s'):\n",
-    "            ch2.imwrite(str(self.count)+'.jpg', frame)\n",
+    "            cv2.imwrite(str(self.count)+'.jpg', frame)\n",
     "            self.count = self.count+1\n",
     "            print(\"Saved\")\n",
     "            \n",
@@ -46,6 +55,19 @@
     "                faces_rect = haar_cascade.detectMultiScale(gray_img, scaleFactor = 1.05, minNeighbors = 9, minSize = (30, 30), flags = cv2.CASCADE_SCALE_IMAGE)\n",
     "                for(x,y,w,h) in faces_rect:\n",
     "                    cv2.rectangle(frame, (x,y),(x+w, y+h),(0,255,0),2)\n",
+    "                    \n",
+    "                if len(faces_rect)>0 and self.time_started == False:\n",
+    "                    prev_time = int(time.time())\n",
+    "                    self.take_snapshot(frame)\n",
+    "    \n",
+    "                curr_time = int(time.time())\n",
+    "\n",
+    "                if self.time_started:\n",
+    "                    if (curr_time-prev_time>10):\n",
+    "                        self.time_started = False\n",
+    "                        cv2.destroyAllWindows()\n",
+    "                        prev_time = time.time()\n",
+    "        \n",
     "                cv2.imshow(\"face\", frame)\n",
     "                if cv2.waitKey(1) & 0xFF == ord('q'):\n",
     "                    break\n",
@@ -53,21 +75,13 @@
     "        cv2.destroyAllWindows()\n",
     "            \n",
     "if __name__ == \"__main__\":\n",
-    "    face_viewer()"
+    "    face_viewer()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6de082e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "09f587b1",
+   "id": "20e66ea4",
    "metadata": {},
    "outputs": [],
    "source": []
