Detection and Snap

--- a/faceDetection.ipynb
+++ b/faceDetection.ipynb
@@ -13,19 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f226aa79",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Press S to save the image\n",
-      "Press S to save the image\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class face_viewer:\n",
     "    \n",
@@ -72,19 +63,33 @@
     "                if cv2.waitKey(1) & 0xFF == ord('q'):\n",
     "                    break\n",
     "        self.cap.release()\n",
-    "        cv2.destroyAllWindows()\n",
-    "            \n",
-    "if __name__ == \"__main__\":\n",
-    "    face_viewer()\n"
+    "        cv2.destroyAllWindows()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "20e66ea4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Press S to save the image\n",
+      "Press S to save the image\n",
+      "Press S to save the image\n",
+      "Press S to save the image\n",
+      "Press S to save the image\n",
+      "Press S to save the image\n",
+      "Saved\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    face_viewer()"
+   ]
   }
  ],
  "metadata": {
